[tool.poetry]
name = "hello-django-oauth-toolkit"
version = "0.1.0"
description = ""
authors = ["Kan Ouivirach <kan@odds.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
django-oauth-toolkit = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
